    about Sound Blaster, and also menu item "Show MIDI
    device configuration" (also under "Sound" menu)
    to show information about the current MIDI device
    such as the soundfont file in use. (Wengier)
  - Added "Mount multiple disk/CD images" option to the
    mounting options of the Drive menu to allow users
    to mount more than one disk/CD images to a drive,
    swappable from the menu. (Wengier)
  - Added new CPU types to the "Emulate CPU speed" menu
    group namely 286-25MHz, 386DX-25MHz, 486DX4-100MHz,
    486DX5-133MHz, Pentium-60MHz, Pentium-75MHz, and
    Pentium-90MHz. Thanks again for the data provided
    by the user maximus105. (Wengier)
  - You can now select a special key (e.g. Alt+Tab,
    Ctrl+Break, Ctrl+Alt+Del, etc) to be sent from the
    key defined in the mapper editor. The key can be
    selected (Ctrl+Alt+Del by default) from the "Send
    special key" menu group in "Main" menu. (Wengier)
  - Added full Ctrl+Break emulation at the BIOS and
    DOS level, updated console emulation to match.
    The "Pause" mapper shortcut is now moved to
    HOST[F11/F12]+Pause instead of Ctrl+Pause so that
    Ctrl+Break can work properly for users, and the
    function to send the Ctrl+Break key from the menu
    ("Send special key" under "Main") is added. Also,
    the PC-98 STOP key now functions the same as the
    Ctrl+C and Ctrl+Break keys in IBM PC mode.
  - Added functions "CopyToClipboard" and "QuickRun" to
    the mapper editor so that you can use shortcuts to
    activate them (default shortcuts: HOST(F11/F12)+A
    and HOST(F11/F12)+Q respectively), and a default
    shortcut HOST(F11/F12)+V is added to the clipboard
    paste function. Meanwhile, FullCore and SimpleCore
    shortcuts are removed from the mapper. (Wengier)
  - Added two new menu items in the "Shared clipboard
    functions" menu group under "Main", including "Copy
    all text on the DOS screen" which will copy all
    screen text to the clipboard, and "Stop clipboard