@@ -60,7 +60,8 @@
   - Added "Mount multiple disk/CD images" option to the
     mounting options of the Drive menu to allow users
     to mount more than one disk/CD images to a drive,
-    swappable from the menu. (Wengier)
+    swappable from the menu. Also added separators to
+    the Drive submenu to make it look better. (Wengier)
   - Added new CPU types to the "Emulate CPU speed" menu
     group namely 286-25MHz, 386DX-25MHz, 486DX4-100MHz,
     486DX5-133MHz, Pentium-60MHz, Pentium-75MHz, and
